[tool.poetry]
name = "voted"
version = "0.1.0"
description = ""
authors = ["lennartfu <lennartfu@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
pillow = "^10.1.0"
shortuuid = "^1.0.11"
python-dotenv = "^1.0.1"
django-extensions = "^3.2.3"
werkzeug = "^3.0.1"
pyopenssl = "^24.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
